--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                echo 'Hello Priya and Jamini welcome to Jenkins'
+                echo 'Manoj welcome to Jenkins'
                 echo 'Building source code'
             }
         }
